@startuml
class Person {
    -String firstName
    -String lastName
    -String ID
    -String title
    -int YOB
    +Person(String firstName, String lastName, String ID, String title, int YOB)
    +String getFirstName()
    +void setFirstName(String firstName)
    +String getLastName()
    +void setLastName(String lastName)
    +String getID()
    +void setID(String ID)
    +String getTitle()
    +void setTitle(String title)
    +int getYOB()
    +void setYOB(int YOB)
    +String toString()
    +String fullName()
    +String formalName()
    +int getAge()
    +int getAge(int year)
    +String toCSV()
    +String toJSON()
    +String toXML()
}

class PersonGenerator {
    +main(String[] args)
}

class SafeInputObj {
    +String getNonZeroLenString(Scanner pipe, String prompt)
    +String getMinLenString(Scanner pipe, String prompt, int minLen)
    +int getRangedInt(Scanner pipe, String prompt, int low, int high)
    +int getInt(Scanner pipe, String prompt)
    +double getRangedDouble(Scanner pipe, String prompt, int low, int high)
    +double getDouble(Scanner pipe, String prompt)
    +boolean getYNConfirm(Scanner pipe, String prompt)
    +String getRegExString(Scanner pipe, String prompt, String regExPattern)
}

PersonGenerator --> Person : uses
SafeInputObj --> Person : uses
@enduml